--- a/templates/home.html
+++ b/templates/home.html
@@ -6,13 +6,13 @@
 
 <div class="hero-home">
     <div class="hero-text">
-        <h1>Welcome to the MS Risk<br>2024 EURO Sweepstake</h1>
-        <p>Some inspiring text goes here.</p>
+        <h1 style="text-shadow: 1.5px 1.5px 3px #404040;">Welcome to the MS Risk<br>2024 EURO Sweepstake</h1>
+        <p style="text-shadow: 1px 1px 2px #404040;">Some inspiring text goes here.</p>
         {% if user.is_authenticated %}
-            <a class="btn btn-primary" href="{% url 'leaderboard' %}">Go to Leaderboard</a>
+            <a class="btn btn-primary shadow" href="{% url 'leaderboard' %}">Go to Leaderboard</a>
         {% else %}
-            <a class="btn btn-primary m-1" href="{% url 'sign-up' %}">Take part</a>
-            <a class="btn btn-outline-primary m-1" href="{% url 'leaderboard' %}">Go to Leaderboard</a>
+            <a class="btn btn-primary m-1 shadow" href="{% url 'sign-up' %}">Take part</a>
+            <a class="btn btn-outline-primary m-1 shadow" href="{% url 'leaderboard' %}">Go to Leaderboard</a>
         {% endif %}
     </div>
   </div>
