--- a/templates/rules.html
+++ b/templates/rules.html
@@ -34,13 +34,13 @@
         </div><!-- /.row -->
         <div class="row">
             <div class="col-lg-4">
-                <p>The winner receives 60% of the pot.</p>
+                <p>The winner receives 60% of the players' pot.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <p>The second place receioves 30% of the pot.</p>
+                <p>The second place receioves 30% of the players' pot.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <p>The third place receioves 10% of the pot.</p>
+                <p>The third place receioves 10% of the players' pot.</p>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -51,13 +51,13 @@
 
             <div class="col-md-5 text-center m-auto">
                 <h2 class="featurette-heading fw-normal lh-1">Your Stake <span
-                        class="text-body-secondary">￡10</span></h2>
+                        class="text-body-secondary">￡5</span></h2>
             </div>
 
             <div class="col-md-7">
-                <p class="lead my-2">After signing-up you'll get instructions on how to transfer the ￡10 into the pot.</p>
-                <p class="lead my-2">2/3 of the pot will be distributed to the winners.</p>
-                <p class="lead my-2">1/3 of the pot will be donated to the charities selcted by the winners.</p>
+                <p class="lead my-2">After signing-up you'll get instructions on how to transfer the ￡5 into the pot.</p>
+                <p class="lead my-2">50% of the pot will be distributed among the Top 3 participants.</p>
+                <p class="lead my-2">50% of the pot will be donated to a charity selected by the winner.</p>
             </div>
 
         </div>
@@ -68,7 +68,7 @@
 
         <div class="row featurette">
             <div class="col-md-5" align="center">
-                <img src="/static/pexels-mike-468229-1171084.jpg" width="400" alt="img">
+                <img src="/static/pexels-mike-468229-1171084.jpeg" width="400" alt="img">
             </div>
 
             <div class="col-md-7">
@@ -91,7 +91,7 @@
                 <h2 class="featurette-heading fw-normal lh-1">Winner of each <span
                         class="text-body-secondary">Group</span></h2>
                 <p class="lead">Before the first group match begins put in who you'd expect to win each group. You cannot change your choice after the first match within that group began.</p>
-                <p class="lead">Each correct group winner gets you 8 points.</p>
+                <p class="lead">Each correct group winner gets you 5 points.</p>
             </div>
 
         </div>
