Fix several errors and add group phase bets #patch

--- a/templates/rules.html
+++ b/templates/rules.html
@@ -37,10 +37,10 @@
                 <p>The winner receives 60% of the players' pot.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <p>The second place receioves 30% of the players' pot.</p>
+                <p>The second place receives 30% of the players' pot.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <p>The third place receioves 10% of the players' pot.</p>
+                <p>The third place receives 10% of the players' pot.</p>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -106,8 +106,8 @@
             <div class="col-md-7">
                 <h2 class="featurette-heading fw-normal lh-1">The <span
                         class="text-body-secondary">Winners</span></h2>
-                <p class="lead">Before the first match begins put in who'll be 1st, 2nd, and 3rd. You cannot make changes once the first match began.</p>
-                <p class="lead">The correct EURO Cghampion get you 30 points, 2nd place 15 points and 3rd, 10 points.</p>
+                <p class="lead">Before the first match begins enter your tournment favourite. You cannot make changes once the first match began.</p>
+                <p class="lead">The correct EURO Champion gets you 30 points, 2nd place 15 points, and 3rd place 10 points.</p>
             </div>
 
         </div>
