--- a/templates/bets.html
+++ b/templates/bets.html
@@ -4,22 +4,50 @@
 
 {% block content %}
     <div class="hero-my">
-        <div class="container bg-white h-100 overflow-auto">
-            <ul class="pb-2 px-5" style="text-align: left;">
-                <li class="p-1">ToDo: 1st / 2nd / 3rd Place.</li>
-                <li class="p-1">ToDo: Total Points</li>
-                <li class="p-1">ToDo: Other Peoples' Bets page</li>
-            </ul>
+        <div class="container bg-white h-100 overflow-auto" style="max-width: 85%;">
 
-        <hr class="featurette-divider my-4">
+            <div class="row my-2 mx-4 mt-4">
+                <div class="col-4 text-start p-0"></div>
+                <div class="col-4 p-0 h2 text-center">{{ user_name }}</div>
+                <div class="col-4 text-end p-0"><a class="btn btn-outline-primary" href="{% url 'leaderboard' %}">Go to
+                    Leaderborad</a></div>
+            </div>
+            <div class="row my-2 mx-4">
+                <div class="col-4 text-start p-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                         class="bi bi-check-lg" viewBox="0 0 16 16">
+                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
+                    </svg>
+                    Stake received
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                         class="bi bi-check-lg" viewBox="0 0 16 16">
+                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
+                    </svg>
+                    Email verified
+                </div>
+                <div class="col-4 p-0 text-center">My Rank: {{ user_rank }}</div>
+                <div class="col-4 text-end p-0">Total Points: {{ user_points }}</div>
+            </div>
 
-            <form action="{% url 'bets' %}" method="post" name="bets">
+            <hr class="featurette-divider mt-4 mb-2">
+            <hr class="featurette-divider mb-4 mt-2">
+
+            <div class="row my-2 mx-4">
+                <div class="col-4 text-start p-0"></div>
+                <div class="col-4 p-0 h3 text-center">My Tournament Favorite:</div>
+                <div class="col-4 text-end p-0"><input type="submit" name="submit" class="btn btn-primary"
+                                                       value="Save My Favorite"></div>
+            </div>
+
+            <hr class="featurette-divider my-4">
+
+            <form action="{% url 'bets' %}" method="post" name="groups">
+                {{ group_formset.management_form }}
                 {% csrf_token %}
-                {{ formset.management_form }}
 
                 <div class="row my-2 mx-4">
                     <div class="col-4 text-start p-0"></div>
-                    <div class="col-4 p-0 h2 text-center">My Group Winners:</div>
+                    <div class="col-4 p-0 h3 text-center">My Group Favorites:</div>
                     <div class="col-4 text-end p-0"><input type="submit" name="submit" class="btn btn-primary"
                                                            value="Save My Groups"></div>
                 </div>
@@ -28,24 +56,38 @@
                     <div class="row">
                         {% for form in group_formset %}
                             <div class="col-4 p-2">
-                                <div class="w-75 border rounded p-2 mx-auto">
+                                <div class="w-75 border rounded p-3 m-2 mx-auto">
                                     <div class="container">
-                                        <div class="row fw-bold pb-1 ps-1">
-                                            {{ form.group_name.value }}
+                                        <div class="row fw-bold pb-2 ps-1">
+                                            <div class="col-4 ps-0">
+                                                {{ form.group_name.value }}{{ form.group_id }}
+                                            </div>
+                                            <div class="col-8 pe-1 text-end">
+                                                <img class="m-0" src="{{ form.flag_1.value }}" height="25px"
+                                                     width="25px">
+                                                <img class="m-0" src="{{ form.flag_2.value }}" height="25px"
+                                                     width="25px">
+                                                <img class="m-0" src="{{ form.flag_3.value }}" height="25px"
+                                                     width="25px">
+                                                <img class="m-0" src="{{ form.flag_4.value }}" height="25px"
+                                                     width="25px">
+                                            </div>
                                         </div>
-                                        <div class="row">
+                                        <div class="row py-2">
                                             {% if form.editable.value %}
                                                 {{ form.bet }}
                                             {% else %}
-                                                <select name="groups-{{ forloop.counter0 }}-bet" class="form-control" style="text-align:center;" id="id_groups-{{ forloop.counter0 }}-bet" disabled>
-                                                  <option value="" selected="">{{ form.bet.value }}</option>
+                                                <select name="groups-{{ forloop.counter0 }}-bet" class="form-control"
+                                                        style="text-align:center;"
+                                                        id="id_groups-{{ forloop.counter0 }}-bet" disabled>
+                                                    <option value="" selected="">{{ form.bet.value }}</option>
                                                 </select>
                                             {% endif %}
                                         </div>
                                         {% if form.text %}
-                                        <div class="row fst-italic text-secondary pt-1">
-                                            <small>{{ form.text.value }}</small>
-                                        </div>
+                                            <div class="row fst-italic text-secondary">
+                                                <small>{{ form.text.value }}</small>
+                                            </div>
                                         {% endif %}
                                     </div>
                                 </div>
@@ -57,13 +99,13 @@
 
             <hr class="featurette-divider my-4">
 
-            <form action="{% url 'bets' %}" method="post" name="bets">
+            <form action="{% url 'bets' %}" method="post" name="matches">
+                {{ match_formset.management_form }}
                 {% csrf_token %}
-                {{ formset.management_form }}
                 <div class="row mt-4 mb-3 mx-4">
                     <div class="col-4 text-start p-0"><input type="submit" name="random" class="btn btn-outline-primary"
                                                              value="Random Match Score Generator"></div>
-                    <div class="col-4 p-0 h2 text-center">My Matches:</div>
+                    <div class="col-4 p-0 h3 text-center">My Matches:</div>
                     <div class="col-4 text-end p-0"><input type="submit" name="submit" class="btn btn-primary"
                                                            value="Save My Matches"></div>
                 </div>
@@ -80,7 +122,7 @@
 
                 <table>
                     {% for form in match_formset %}
-                        <div class="row border rounded p-2 my-2 mx-4">
+                        <div class="row border rounded p-2 my-2 mx-4 d-flex justify-content-between">
                             <div class="col-2 fw-bold align-middle d-flex">
                                 <span class="my-auto">{{ form.match_time.value }}{{ form.match_id }}</span>
                             </div>
@@ -88,11 +130,12 @@
                                 {{ form.team_a.value }}
                                 <img class="m-2" src="{{ form.flag_a.value }}" height="25px" width="25px">
                             </div>
-                            <div class="col-1">
+                            <div class="col-1 pe-0">
                                 {% if form.editable.value %}
                                     {{ form.bet_a }}
                                 {% else %}
-                                    <input type="number" name="matches-{{ forloop.counter0 }}-bet_a" class="form-control"
+                                    <input type="number" name="matches-{{ forloop.counter0 }}-bet_a"
+                                           class="form-control"
                                            style="text-align:center;" id="id_matches-{{ forloop.counter0 }}-bet_a"
                                            value="{{ form.bet_a.value }}" disabled>
                                 {% endif %}
@@ -108,11 +151,12 @@
                                 {% endif %}
                             </span>
                             </div>
-                            <div class="col-1">
+                            <div class="col-1 ps-0">
                                 {% if form.editable.value %}
                                     {{ form.bet_b }}
                                 {% else %}
-                                    <input type="number" name="matches-{{ forloop.counter0 }}-bet_b" class="form-control"
+                                    <input type="number" name="matches-{{ forloop.counter0 }}-bet_b"
+                                           class="form-control"
                                            style="text-align:center;" id="id_matches-{{ forloop.counter0 }}-bet_b"
                                            value="{{ form.bet_b.value }}" disabled>
                                 {% endif %}
@@ -121,7 +165,7 @@
                                 <img class="m-2" src="{{ form.flag_b.value }}" height="25px" width="25px">
                                 {{ form.team_b.value }}
                             </div>
-                            <div class="col-3 fst-italic text-secondary d-flex">
+                            <div class="col-2 fst-italic text-secondary d-flex ps-0">
                                 <span class="my-auto">
                                 {{ form.text.value }}
                                 </span>
