--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <div class="hero-winner">
-        <div class="hero-text">
+        <div class="hero-text" style="max-width: 80%;">
             <div class="p-5 rounded shadow" style="background: rgba(0,0,0,0.7);">
                 <h2>The Leaderboard</h2>
                 <p>The Rules summarized:<br>
@@ -13,23 +13,27 @@
                     <li class="p-1">3 Points for predicting a match's winner correct.</li>
                     <li class="p-1">5 Points for predicting a match's final score correct.</li>
                     <li class="p-1">5 Points for predicting a group's winner correct.</li>
-                    <li class="p-1">30 / 15 / 10 Points for predicting the tournament's 1st / 2nd / 3rd place correct.</li>
+                    <li class="p-1">30 / 15 / 10 Points for predicting the tournament's 1st / 2nd / 3rd place correct.
+                    </li>
                 </ul>
                 </p>
-            <hr class="featurette-divider my-2" style="border-top: 2px  solid rgb(255, 255, 255);">
-            <div class="row fw-bold">
+                <hr class="featurette-divider my-2" style="border-top: 2px  solid rgb(255, 255, 255);">
+                <div class="row fw-bold">
                     <div class="col-3">#</div>
-                <div class="col-6">Name</div>
-                <div class="col-3">Points</div>
+                    <div class="col-6">Name</div>
+                    <div class="col-3">Points</div>
                 </div>
                 <hr class="featurette-divider my-2" style="border-top: 2px  solid rgb(255, 255, 255);">
                 {% for row in ranking %}
-                <div class="row">
-                    <div class="col-3">{{ row.rank }}</div>
-                <div class="col-6">{{ row.user__username }}{% if row.user__team is not None %} ({{ row.user__team }}){% endif %}</div>
-                <div class="col-3">{{ row.total_points }}</div>
-                </div>
-                <hr class="featurette-divider my-2">
+                    <div class="row">
+                        <div class="col-3">{{ row.rank }}</div>
+                        <div class="col-6">
+                            {{ row.user__username }}
+                            {% if row.user__team is not None %} ({{ row.user__team }}){% endif %}
+                        </div>
+                        <div class="col-3">{{ row.total_points }}</div>
+                    </div>
+                    <hr class="featurette-divider my-2">
                 {% endfor %}
 
             </div>
