--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -8,12 +8,12 @@
         <div class="hero-text" style="max-width: 80%;">
             <div class="p-5 rounded shadow" style="background: rgba(0,0,0,0.7);">
                 <h2>The Leaderboard</h2>
-                <p>The Rules summarized:<br>
+                <p><a class="link-light fst-italic" href="{% url 'rules' %}">The Rules</a> summarized:<br>
                 <ul class="pb-2 px-5" style="text-align: left;">
                     <li class="p-1">3 Points for predicting a match's winner correct.</li>
                     <li class="p-1">5 Points for predicting a match's final score correct.</li>
-                    <li class="p-1">5 Points for predicting a group's winner correct.</li>
-                    <li class="p-1">30 / 15 / 10 Points for predicting the tournament's 1st / 2nd / 3rd place correct.
+                    <li class="p-1">8 Points for predicting a group's winner correct.</li>
+                    <li class="p-1">25 Points for predicting the EURO 2024 Champion or 15 Points for the runner-up.
                     </li>
                 </ul>
                 </p>
