--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -4,16 +4,15 @@
 
 {% block content %}
     <div class="hero-home">
-        <div class="hero-text">
+        <div class="hero-text py-5 h-100 overflow-auto">
             <div class="p-5 rounded shadow" style="background: rgba(0,0,0,0.7);">
                 <h2>Sign Up</h2>
                 <p>The Rules summarized:<br>
                 <ul class="pb-2 px-5" style="text-align: left;">
-                    <li class="p-1">You put in how you expect the matches end, who'll be group winner, and EURO
-                        Champion.
+                    <li class="p-1">You predict the results of the matches, the group winners, and the EURO 2024 Chamion.
                     </li>
-                <li class="p-1">Points are assigned based on <a class="link-light fst-italic" target="_blank" href="{% url 'rules' %}">"The Rules"-Page</a>.</li>
-                    <li class="p-1">Everyone puts ￡5 in the pot with 50% of the pot being donated to charity and 50% of the pot
+                <li class="p-1">Points are awarded based on <a class="link-light fst-italic" target="_blank" href="{% url 'rules' %}">"The Rules"-Page</a>.</li>
+                    <li class="p-1">Everyone puts ￡5 in the pot, with 50% of the pot being donated to charity and 50% of the pot
                         being distributed among the Top 3 participants.
                     </li>
                 </ul>
