--- a/templates/rules.html
+++ b/templates/rules.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="col-md-7">
-                <p class="lead my-2">After signing-up you'll get instructions on how to transfer the ￡5 into the pot.</p>
+                <p class="lead my-2">After signing up you will receive instructions on how to transfer the £5 into the pot.</p>
                 <p class="lead my-2">50% of the pot will be distributed among the Top 3 participants.</p>
                 <p class="lead my-2">50% of the pot will be donated to a charity selected by the winner.</p>
             </div>
@@ -74,8 +74,8 @@
             <div class="col-md-7">
                 <h2 class="featurette-heading fw-normal lh-1">Every <span
                         class="text-body-secondary">Match</span></h2>
-                <p class="lead">Before every match put in how you expect every match ends. You can change your bet until match kick-off.</p>
-                <p class="lead">The correct score gets you 5 points, the correct winner 3 points.</p>
+                <p class="lead">Before each match, enter your predictions for that match. You can change your predictions right up until kick-off.</p>
+                <p class="lead">The correct answer is worth 5 points, the correct winner 3 points.</p>
             </div>
 
         </div>
@@ -88,10 +88,9 @@
             </div>
 
             <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">Winner of each <span
-                        class="text-body-secondary">Group</span></h2>
-                <p class="lead">Before the first group match begins put in who you'd expect to win each group. You cannot change your choice after the first match within that group began.</p>
-                <p class="lead">Each correct group winner gets you 5 points.</p>
+                <h2 class="featurette-heading fw-normal lh-1"><span class="text-body-secondary">Group</span> Winner</h2>
+                <p class="lead">Before the first group match kicks of, predict the winner of that group. You cannot change your selection after the first match of that group has started.</p>
+                <p class="lead">Each correct group winner is worth 8 points.</p>
             </div>
 
         </div>
@@ -106,8 +105,8 @@
             <div class="col-md-7">
                 <h2 class="featurette-heading fw-normal lh-1">The <span
                         class="text-body-secondary">Winners</span></h2>
-                <p class="lead">Before the first match begins enter your tournment favourite. You cannot make changes once the first match began.</p>
-                <p class="lead">The correct EURO Champion gets you 30 points, 2nd place 15 points, and 3rd place 10 points.</p>
+                <p class="lead">Before the first game of the tournament (i.e. Saturday June 14th – 8:00 p.m.), predict the 2024 EURO champion. Once the first game has started, you will no longer be able to make any changes.</p>
+                <p class="lead">The correct EURO Champion is worth 25 points, the runner-up 15 points.</p>
             </div>
 
         </div>
