--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Match Schedule{% endblock %}
+{% block title %}Tournament Schedule{% endblock %}
 
 {% block content %}
     <div class="hero-schedule">
@@ -8,9 +8,9 @@
 
             <div class="row  mt-4 mx-4">
                 <div class="col-3"></div>
-                <div class="col-6 h2 text-center">Match Schedule & Results</div>
-                <div class="col-3 text-end"><a class="text-end btn btn-primary text-end" href="/bets/">Change My
-                    Matches</a></div>
+                <div class="col-6 h2 text-center">Tournament Schedule & Results</div>
+                <div class="col-3 text-end"><a class="text-end btn btn-primary text-end" href="/bets/">Edit My
+                    Predictions</a></div>
             </div>
 
 
