--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -35,7 +35,7 @@
                     {% endif %}
 
                     <div class="d-flex justify-content-between mx-auto p-1 mt-3" style="width: 85%;">
-                        <a class="btn btn-outline-primary" href="{% url 'sign-up' %}">Sign Up</a>
+                        <a class="btn btn-outline-primary" href="{% url 'sign-up' %}">Take part / Sign up</a>
                         <input type="submit" class="btn btn-primary" value="Log In">
                     </div>
                 </form>
