Fix team not being added on user sign-up and minorr text changes #patch

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -8,7 +8,7 @@
 
             <div class="row  mt-4 mx-4">
                 <div class="col-3"></div>
-                <div class="col-6 h2 text-center">Tournament Schedule & Results</div>
+                <div class="col-6 h2 text-center">Tournament Schedule</div>
                 <div class="col-3 text-end"><a class="text-end btn btn-primary text-end" href="/bets/">Edit My
                     Predictions</a></div>
             </div>
