Add tournament predictions #minor

--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,7 @@
 <div class="text-light bg-dark w-100 p-2 m-0">
     <footer class="d-flex flex-wrap justify-content-around align-items-center py-2">
 
-        <p class="cust-navbar-item mb-0"><small>Stock photos with credit from pexels.com and icons from flaticon.com</small></p>
+        <p class="cust-navbar-item mb-0"><small>Stock photos with credit from <a href="https://www.pexels.com" class="cust-navbar-item" target="_blank" title="photos">pexels.com</a> and icons from  <a href="https://www.flaticon.com" class="cust-navbar-item" target="_blank" title="icons">flaticon.com</a></small></p>
         <a href="/admin/" class="cust-navbar-item mb-0" target="_blank"><small>Admin Space</small></a>
         <a href="https://github.com/vanalmsick/sweepstake" class="cust-navbar-item mb-0" target="_blank"><small>Source Code</small></a>
 
