--- a/templates/rules.html
+++ b/templates/rules.html
@@ -104,7 +104,7 @@
 
             <div class="col-md-7">
                 <h2 class="featurette-heading fw-normal lh-1">The <span
-                        class="text-body-secondary">Winners</span></h2>
+                        class="text-body-secondary">Champion</span></h2>
                 <p class="lead">Before the first game of the tournament (i.e. Saturday June 14th – 8:00 p.m.), predict the 2024 EURO champion. Once the first game has started, you will no longer be able to make any changes.</p>
                 <p class="lead">The correct EURO Champion is worth 25 points, the runner-up 15 points.</p>
             </div>
