--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -32,12 +32,79 @@
                 </div>
             </div>
 
-            <div class="bg-white my-4 p-2 shadow-lg rounded">
-                <div class="col-4 text-start p-0"></div>
-                <div class="col-4 p-0 h3 text-center">My Tournament Favorite:</div>
-                <div class="col-4 text-end p-0"><input type="submit" name="submit" class="btn btn-primary"
-                                                       value="Save My Favorite"></div>
-            </div>
+            <form class="bg-white my-4 p-2 shadow-lg rounded" action="{% url 'predictions' %}" method="post"
+                  name="tournament">
+                {% csrf_token %}
+                <div class="row mt-3 mb-2 mx-4">
+                    <div class="col-4 text-start p-0"></div>
+                    <div class="col-4 p-0 h3 text-center">My Tournament:</div>
+                    <div class="col-4 text-end p-0"><input type="submit" name="submit" class="btn btn-primary"
+                                                           value="Save Tournament"></div>
+                </div>
+
+                <div class="row fst-italic text-secondary text-center mb-1">
+                    <small>Who do you think will win the 2024 UEFA European Football Championship? And if you win this
+                        competition, which charity should receive 50% of the prize money?</small>
+                </div>
+
+
+                <div class="container mb-2">
+                    <div class="row">
+
+                        <div class="col-6 p-2">
+                            <div class="w-75 border rounded p-3 m-2 mx-auto">
+                                <div class="container">
+                                    <div class="row fw-bold pb-2 ps-1">
+                                        <div class="col-10 ps-0">
+                                            {{ tournament_form.tournament_name.value }}
+                                            Champion{{ tournament_form.tournament_id }}
+                                        </div>
+                                        <div class="col-2 pe-1 text-end">
+                                            <img class="m-0" src="/static/trophy.png" height="30px"
+                                                 width="30px">
+                                        </div>
+                                    </div>
+
+                                    <div class="row py-2">
+                                        {{ tournament_form.bet }}
+                                    </div>
+                                    {% if tournament_form.text %}
+                                        <div class="row fst-italic text-secondary">
+                                            <small>{{ tournament_form.text.value }}</small>
+                                        </div>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-6 p-2">
+                            <div class="w-75 border rounded p-3 m-2 mx-auto">
+                                <div class="container">
+                                    <div class="row fw-bold pb-2 ps-1">
+                                        <div class="col-10 ps-0">
+                                            My Charity <span class="fst-italic text-secondary">(If I Win)</span>
+                                        </div>
+                                        <div class="col-2 pe-1 text-end">
+                                            <img class="m-0" src="/static/empathy.png" height="30px"
+                                                 width="30px">
+                                        </div>
+                                    </div>
+                                    <div class="row py-2">
+                                        {{ tournament_form.charity|safe }}
+                                    </div>
+                                    {% if tournament_form.text %}
+                                        <div class="row fst-italic text-secondary">
+                                            <small>In some browsers double click to see suggestions.</small>
+                                        </div>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </form>
 
             <form class="bg-white my-4 p-2 shadow-lg rounded" action="{% url 'predictions' %}" method="post"
                   name="groups">
@@ -49,6 +116,11 @@
                     <div class="col-4 p-0 h3 text-center">My Group Favorites:</div>
                     <div class="col-4 text-end p-0"><input type="submit" name="submit" class="btn btn-primary"
                                                            value="Save My Groups"></div>
+                </div>
+
+                <div class="row fst-italic text-secondary text-center mb-1">
+                    <small>Probability of predicting a group winner is 25%. With 6 groups, a completely random pick is
+                        expected to result in 1.5 correct predictions. Can you beat randomness?</small>
                 </div>
 
                 <div class="container mb-2">
@@ -117,6 +189,12 @@
                         {% endfor %}
                     {% endfor %}
                 {% endif %}
+
+                <div class="row fst-italic text-secondary text-center mb-3">
+                    <small>Probability of predicting a match winner is 33% for the group-phase and 50% thereafter. With
+                        36 group-phase matches and 15 other,<br>a completely random pick is expected to result in 19.5
+                        correct match winners. Can you beat randomness?</small>
+                </div>
 
                 <table>
                     {% for form in match_formset %}
